<resources>
    <string name="app_name">FGOcalc</string>
    <string name="data_from">数据取自fgowiki,茹西教王的理想乡</string>
    <string name="app_about">参与名单\nAPP制作：空谕，百度月系吧刊组\n程序-APP：纯蓝魔法使\n程序-后台：windy(森林雪拉比)，strawberryG(黄昏现白骨)\n数据库录入：纯蓝魔法使(蓝魔)，LevsLeos(妹红)，高川，shenzhixiyue(夕月)，major56y(56)，白我风闻(风子)，黑璃v镜(镜子)，saiya(夜魇悲歌)，红尘眷恋N(红秃子)，
晓澄若笙凉(夏兮)\n解包+图片素材:遗忘的银灵\n宣传：纯蓝魔法使(蓝魔)，你即美好(残留),黑璃v镜(镜子)\n数据取自fgowiki,茹西教王的理想乡\n感谢浮云般飘过(斬撃皇帝騎士団)、LevsLeos(妹红)，为打星计算器的开发提出了建设性建议。</string>
    <string name="database_upgrade_done">数据库更新完毕！</string>
    <string name="database_reload_done">数据库重载完毕！</string>
    <string name="database_download_done">外置数据库下载完毕！\n可以点载入外置数据库了！</string>
    <string name="database_load_extra_done">外置数据库装载完毕！</string>
    <string name="permission_error">权限不足，无法加载数据！</string>
    <string name="database_error">数据异常，如果能用就继续用。\n如果没数据了，请检查权限后去侧滑菜单点击重载数据库！</string>
    <string name="arts_hit">蓝卡hit</string>
    <string name="buster_hit">红卡hit</string>
    <string name="quick_hit">绿卡hit</string>
    <string name="ex_hit">EX卡hit</string>
    <string name="quick_na">绿卡NP获取率</string>
    <string name="arts_na">蓝卡NP获取率</string>
    <string name="buster_na">红卡NP获取率</string>
    <string name="ex_na">EX卡NP获取率</string>
    <string name="trump_na">宝具NP获取率</string>
    <string name="nd">被动NP获取率</string>
    <string name="arts_buff">蓝卡性能提升</string>
    <string name="buster_buff">红卡性能提升</string>
    <string name="quick_buff">绿卡性能提升</string>
    <string name="atk_buff">攻击提升</string>
    <string name="special_buff">特攻提升提升</string>
    <string name="critical_buff">暴击威力提升</string>
    <string name="solid_buff">固定伤害</string>
    <string name="star_occur">掉星率</string>
    <string name="star_occur_extra">额外掉星率</string>
    <string name="default_atk">满级atk</string>
    <string name="default_hp">满级hp</string>
    <string name="attribute">阵营</string>
    <string name="traits">特性</string>
    <string name="alignments">属性</string>
    <string name="about_calc_result">长按计算结果可以复制到剪切板，这个功能一直都有，之前没明说。多个计算器之间共享buff设置。默认atk为满级atk+1000，默认hp为满级hp+1000。3蓝的20%np，3绿的10星不参与计算。从者被动属性自动带入计算。np的平均补正不是标准的1.0，比1.0略高，标准是1.0。</string>
    <string name="fgocalc_divider">\n\n==== FGOcalc ====\n\n</string>
    <string name="navgation_left">←_←</string>
    <string name="navgation_right">→_→</string>

    <!--MainActy-->
    <string name="permission_deny">您拒绝了权限，或影响正常使用</string>
    <!--搜索提示-->
    <string name="search_hint">输入从者名称或昵称搜索</string>

    <!--FilterFrag-->
    <string name="filter">筛选</string>
    <string name="reset">重置</string>

    <!--InfoFrag-->
    <string name="more_info">去wiki查看更多信息</string>

    <!--BuffFrag-->
    <string name="set_buff">设置Buff</string>
    <string name="svt_buff">从者buff</string>
    <string name="shortcut_support">拐快捷键</string>
    <string name="shortcut_essence">御主快捷键</string>
    <string name="reduce_buff">减buff</string>

    <!--CalcFrag-->
    <string name="calc">计算</string>
    <string name="clean_result">清理结果</string>
    <string name="calc_atk">伤害</string>
    <string name="calc_np_charge">充能</string>
    <string name="calc_star">打星</string>
    <string name="overkill">overkill</string>
    <string name="critical">暴击</string>
    <string name="calc_result">计算结果</string>

    <string name="save">保存</string>

    <string name="load_database_error">数据库加载出错</string>

</resources>
