<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!--控制按钮-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <Button
            android:id="@+id/btn_calc"
            style="@style/ButtonBlue"
            android:text="@string/calc"/>

        <Button
            android:id="@+id/btn_clean"
            style="@style/ButtonBlue"
            android:text="@string/clean_result"/>

    </LinearLayout>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_cards"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_picked"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1.0"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            />

        <ImageView
            android:id="@+id/iv_card_ex"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="3.0"
            android:src="@drawable/extra"
            />

    </LinearLayout>



    <!--OverKill-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_ok1"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/overkill"/>

        <CheckBox
            android:id="@+id/cb_ok2"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/overkill"/>

        <CheckBox
            android:id="@+id/cb_ok3"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/overkill"/>

        <CheckBox
            android:id="@+id/cb_ok4"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/overkill"/>

    </LinearLayout>

    <!--暴击-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cb_cr1"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/critical"/>

        <CheckBox
            android:id="@+id/cb_cr2"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/critical"/>

        <CheckBox
            android:id="@+id/cb_cr3"
            style="@style/CheckBoxCalc"
            android:layout_weight="1.0"
            android:text="@string/critical"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            />

    </LinearLayout>



    <TextView
        android:layout_width="match_parent"
        android:layout_height="24dp"
        android:gravity="center"
        android:background="@color/blueWordAccent"
        android:text="@string/calc_result"
        android:textColor="@color/blueWordDark"

        />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/fnm_ll_input"
        android:layout_alignParentBottom="true">

        <LinearLayout style="@style/ll_match_width_horizontal">

            <TextView
                android:id="@+id/tv_calc_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:maxLines="99"
                android:paddingLeft="9dp"
                android:scrollbars="vertical"
                android:text="@string/about_calc_result" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_calc_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>